feat: add custom apt-cache-ng config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,8 @@ services:
     restart: unless-stopped
     volumes:
       - ./data/apt:/var/cache/apt-cacher-ng
+      - ./config/apt/acng.conf:/etc/apt-cacher-ng/acng.conf:ro
+
   # pypicloud index using 
   pip:
     image: stevearc/pypicloud
